DTGB-216: Fixed spacing issue for lists.

--- a/components/21-atoms/list/_list.scss
+++ b/components/21-atoms/list/_list.scss
@@ -25,6 +25,8 @@ ul {
   &.iconlist-small {
     @extend %list-no-style;
 
+    margin-left: 0;
+
     li {
       @include icon('checkmark');
 
